[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Backgrounds/mid.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/VendingMachine.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Coin.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Yorn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Bench.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Doors.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 100 )

[node name="Test" type="Node2D"]
script = ExtResource( 1 )

[node name="middle" type="Sprite" parent="."]
position = Vector2( 0, -0.568787 )
texture = ExtResource( 2 )
centered = false

[node name="Platforms" type="Node2D" parent="."]
editor/display_folded = true

[node name="Layer 2" type="Control" parent="Platforms"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Platform5" parent="Platforms/Layer 2" instance=ExtResource( 3 )]
position = Vector2( 1800, 493.5 )
scale = Vector2( 20, 0.5 )

[node name="Layer 1" type="Control" parent="Platforms"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Platform5" parent="Platforms/Layer 1" instance=ExtResource( 3 )]
position = Vector2( 600, 763.5 )
scale = Vector2( 9, 0.5 )

[node name="Platform6" parent="Platforms/Layer 1" instance=ExtResource( 3 )]
position = Vector2( 1500, 763.5 )
scale = Vector2( 9, 0.5 )

[node name="Floor" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 954.089, 1033.5 )
scale = Vector2( 50, 0.5 )

[node name="Ceiling" type="StaticBody2D" parent="Platforms"]
position = Vector2( 960, 139.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Ceiling"]
shape = SubResource( 1 )

[node name="VendingMachine" parent="." instance=ExtResource( 4 )]
position = Vector2( 600, 560.762 )
scale = Vector2( 0.25, 0.25 )

[node name="VendingMachine2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1249.86, 288.733 )
scale = Vector2( 0.25, 0.25 )

[node name="GoldCoin" parent="." instance=ExtResource( 5 )]
position = Vector2( 1747.63, 382.244 )

[node name="SilverCoin" parent="." instance=ExtResource( 5 )]
position = Vector2( 1526.94, 666.756 )

[node name="BronzeCoin" parent="." instance=ExtResource( 5 )]
position = Vector2( 1000, 949.737 )

[node name="Obstacles" type="Node2D" parent="."]

[node name="Yorn" parent="Obstacles" instance=ExtResource( 6 )]
position = Vector2( 2087.24, 395.084 )

[node name="Bench" parent="Obstacles" instance=ExtResource( 7 )]
position = Vector2( 705.238, 977.506 )

[node name="Doors" parent="Obstacles" instance=ExtResource( 8 )]
position = Vector2( 1735.86, 908.829 )

